# CustomTCPcopy

./: .gitignore  CMakeLists.txt  MySocket.cpp  MySocket.h  README.md  data.cpp  data.h  doc.md  header.cpp  header.h  main.cpp
Data/: data.cpp  data.h
Exceptions/: out_of_range_exception.cpp
OutputProcess/: CMakeLists.txt  writer.cpp
Packet/: Packet.cpp  Packet.h
Protocol/: CMakeLists.txt
Protocol/Data/: DinamicData.cpp  DinamicData.h  FileData.cpp  FileData.h  data.cpp  data.h  data_i.cpp  data_i.h
Protocol/Docs/: doc.md
Protocol/Exceptions/: out_of_range_exception.h
Protocol/KeepAlive/: keepAlive.cpp  keepAlive.h
Protocol/Packet/: Packet.cpp  Packet.h  header.cpp  header.h
Protocol/Reader/: MyReader.cpp  MyReader.h  Reader.cpp  Reader.h
Protocol/Receivers/: myReceiver.cpp  myReceiver.h  receiver.h
Protocol/Sendable/: Sendable.h
Protocol/Sender/: Sender.h
Protocol/ShowObserver/: showObserver.cpp  showObserver.h  showObserverPipe.cpp  showObserverPipe.h  showObserverTerminal.cpp  showObserverTerminal.h
Protocol/Socket/: HandShakeStats.cpp  HandShakeStats.h  MySocket.cpp  MySocket.h  header.h
Protocol/WindowF/: MyWindow.cpp  MyWindow.h  WindowF.h
ReaderProcess/: CMakeLists.txt  main.cpp  reader.cpp
Receivers/: myReceiver.cpp  myReceiver.h  receiver.cpp  receiver.h
Sendable/: Sendable.cpp  Sendable.h
Sender/: Sender.cpp  Sender.h
Socket/: HandShakeStats.h  MySocket.cpp  MySocket.h  header.cpp  header.h
Tests/: CMakeLists.txt  TestReaderClass.cpp  TestReaderClass.h  main.cpp  test_reader.cpp
WindowF/: MyWindow.h  WindowF.h
src/: Configure.cpp  Configure.h  main.cpp
src/Packet/: Packet.cpp
src/Reader/: Reader.h
src/Receivers/: myReceiver.h  receiver.cpp  receiver.h
src/Sender/: Sender.h
src/Socket/: header.cpp
src/WindowF/: MyWindow.h  WindowF.cpp
xcode_build/CMakeScripts/: ReRunCMake.make
xcode_build/Pks_project.xcodeproj/: project.pbxproj
xcode_build/Pks_project.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
xcode_build/Pks_project.xcodeproj/xcshareddata/xcschemes/: main.xcscheme
xcode_build/Pks_project.xcodeproj/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode_build/Pks_project.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
